mumble (1.1.4-0ubuntu1) hardy; urgency=low

  * New upstream version.

 -- Thorvald Natvig <slicer@users.sourceforge.net>  Sat, 22 Mar 2008 01:30:00 +0200

mumble (1.1.3-0ubuntu2) hardy; urgency=low

  * Make mumble-server depend on dbus. (LP: #202672)
  * Avoid crash when renaming tree objects (patch from upstream SVN).
  * Remove a warning when installing (missing --no-create-home).

 -- Thorvald Natvig <slicer@users.sourceforge.net>  Sat, 22 Mar 2008 01:25:00 +0200

mumble (1.1.3-0ubuntu1) hardy; urgency=low

  * New upstream version, which fixes a few crashbugs.
  * Licensing issues worked out, package is now BSD licensed (same as
    source).
  * Mumble-specific changes to Speex are now in upstream Speex, and
    this version includes all changes necessary to mumble to unbundle
    Speex. Once Speex 1.2beta4 or 1.2 final is out, unbundling can be
    completed.
  * Changed to use PulseAudio as default audio device, as it's the
    new default in Hardy.
  * Moved the perl cgi scripts for mumble-server into a separate package,
    which means mumble-server doesn't depend on httpd and
    mail-transport-agent. Those dependencies were also missing from
    mumble-server.
  * Updated packaging to adhere to "Debian Developer's Reference -
    Best Packaging Practices."
  * Closes the request to update to 1.1.3 (LP: #194836)

 -- Thorvald Natvig <slicer@users.sourceforge.net>  Sat, 23 Feb 2008 19:00:00 +0200

mumble (1.1.2-0ubuntu1) hardy; urgency=low

  * Packaging for inclusion in ubuntu universe (LP: #129081)

 -- Thorvald Natvig <slicer@users.sourceforge.net>  Mon, 03 Dec 2007 10:40:00 +0200