@@ -6,7 +6,7 @@ Priority: optional
 Homepage: http://mumble.sourceforge.net/
 Vcs-Svn: https://mumble.svn.sourceforge.net/svnroot/mumble/
 Vcs-Browser: http://mumble.svn.sourceforge.net/viewvc/mumble/
-Build-Depends: debhelper (>= 5), libqt4-dev (>= 4.3.0), libboost-dev (>= 1.34.1), libasound2-dev (>= 1.0.14), libxevie-dev (>= 1.0.2), libpulse-dev (>= 0.9.6), quilt, libspeechd-dev, libssl-dev
+Build-Depends: debhelper (>= 5.0.51), libqt4-dev (>= 4.3.0), libboost-dev (>= 1.34.1), libasound2-dev (>= 1.0.14), libxevie-dev (>= 1.0.2), libpulse-dev (>= 0.9.6), quilt, libspeechd-dev, libssl-dev
 Standards-Version: 3.7.3
 
 Package: mumble
