@@ -111,7 +111,7 @@ The copyright for these files are as follows:
 Copyright 2002-2007     Xiph.org Foundation
 Copyright 2002-2007     Jean-Marc Valin
 Copyright 2005-2007     Analog Devices Inc.
-Copyright 2005-2007     Commonwealth Scientific and Industrial Research 
+Copyright 2005-2007     Commonwealth Scientific and Industrial Research
                         Organisation (CSIRO)
 Copyright 1993, 2002, 2006 David Rowe
 Copyright 2003          EpicGames
