@@ -3,7 +3,7 @@ This package includes a system-wide installation of murmurd. If you want a
 personal server running on your own user account, use the murmur-wrapper
 script.
 
-If you have apache running, you can install the mumble-server-web package and 
+If you have apache running, you can install the mumble-server-web package and
 access the user list at
 http://localhost/cgi-bin/mumble-server/list.cgi
 and new users can register themselves at
@@ -12,6 +12,6 @@ http://localhost/cgi-bin/mumble-server/register.cgi
 For registration to work, you will need to set an email address to use for
 registraion emails. To set the address, dpkg-reconfigure mumble-server.
 
-Murmur's root user is called SuperUser. To set the password for superuser, 
+Murmur's root user is called SuperUser. To set the password for superuser,
 simply dpkg-reconfigure mumble-server.
 
