@@ -36,7 +36,7 @@ dbus=session
 
 # The below will be used as defaults for new configured servers.
 # If you're just running one server (the default), it's easier to
-# configure it here than through DBus/SQL. 
+# configure it here than through DBus/SQL.
 #
 # Welcome message sent to users
 welcometext="<br />Welcome to this server running <b>Murmur</b>.<br />Enjoy your stay!<br />"
