@@ -3,7 +3,7 @@
 # then this value must be set to a valid email
 # and you must be running a SMTP server on this
 # machine.
-#emailfrom = 
+#emailfrom =
 
 # How many login attempts do we tolerate from one IP
 # inside a given timeframe before we ban the connection?
@@ -16,7 +16,7 @@
 
 # The below will be used as defaults for new configured servers.
 # If you're just running one server (the default), it's easier to
-# configure it here than through DBus/SQL. 
+# configure it here than through DBus/SQL.
 #
 # Welcome message sent to users
 welcometext="<br />Welcome to this server running <b>Murmur</b>.<br />Enjoy your stay!<br />"
