@@ -11,7 +11,7 @@ QT -= gui
 TARGET = murmur
 DBFILE  = murmur.db
 LANGUAGE	= C++
-FORMS = 
+FORMS =
 HEADERS = Server.h Meta.h DBus.h
 SOURCES = murmur.cpp Server.cpp ServerDB.cpp Register.cpp Cert.cpp Messages.cpp Meta.cpp DBus.cpp
 HEADERS	+= ../ACL.h ../Group.h ../Channel.h ../Connection.h ../Player.h
