@@ -1,8 +1,9 @@
 mumble (1.1.4-0ubuntu1) hardy; urgency=low
 
   * New upstream version.
+  * Synced translations from debian's pkg-voip team.
 
- -- Thorvald Natvig <slicer@users.sourceforge.net>  Sat, 22 Mar 2008 01:30:00 +0200
+ -- Thorvald Natvig <slicer@users.sourceforge.net>  Fri, 09 May 2008 01:30:00 +0200
 
 mumble (1.1.3-0ubuntu2) hardy; urgency=low
 
